--- a/m/t/index3.html
+++ b/m/t/index3.html
@@ -79,6 +79,8 @@
 </article>
 
 </section>
+  
+
 
 
 <div id="contenu_cours">
@@ -91,7 +93,12 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 0 : Retour sur les fonctions, les suites, et quelques raisonnements vus en classe de première</summary>
+    <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_0.png" alt="Miniature chapitre 1" class="miniature">
+      Retour sur les fonctions, les suites, et quelques raisonnements vus en classe de première
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_rappels_fonctions.pdf" target="_blank">Retour sur les fonctions de première</a></p>
       <p><a href="m_t_rappels_suites.pdf" target="_blank">Retour sur les suites de première</a></p>
@@ -99,15 +106,27 @@
     </div>
   </details>
 
-  <details class="chapitre">
-    <summary>Chapitre 1 : Le raisonnement par récurrence</summary>
-    <div class="details-content">
-      <p><a href="m_t_raisonnement_2.pdf" target="_blank">Le raisonnement par récurrence</a></p>
-    </div>
-  </details>
+<details class="chapitre">
+  <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_1.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 1 : Le raisonnement par récurrence
+    </span>
+  </summary>
+  <div class="details-content">
+    <p><a href="m_t_raisonnement_2.pdf" target="_blank">Le raisonnement par récurrence</a></p>
+  </div>
+</details>
+
 
   <details class="chapitre">
-    <summary>Chapitre 2 : Les suites</summary>
+  <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_2.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 2 : Les suites
+    </span>
+  </summary>
+
     <div class="details-content">
       <p><a href="m_t_suites_1.pdf" target="_blank">Limites de suites</a></p>
       <p><a href="m_t_suites_2.pdf" target="_blank">Opérations sur les limites</a></p>
@@ -118,7 +137,13 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 3 : Géométrie dans l'espace</summary>
+    <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_3.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 3 : Géométrie dans l'espace
+    </span>
+  </summary>
+   
     <div class="details-content">
       <p><a href="m_t_espace_1.pdf" target="_blank">Vecteurs dans l'espace</a></p>
       <p><a href="m_t_espace_2.pdf" target="_blank">Droites et plans dans l'espace</a></p>
@@ -130,14 +155,25 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 4 : Compléments sur la dérivation</summary>
+     <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_4.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 4 : Compléments sur la dérivation
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_derivation_3.pdf" target="_blank">Complément de dérivation</a></p>
     </div>
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 5 : Limites de fonctions</summary>
+       <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_5.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 5 : Limites de fonctions
+    </span>
+  </summary>
+  
     <div class="details-content">
       <p><a href="m_t_limites_1.pdf" target="_blank">Limites en l'infini</a></p>
       <p><a href="m_t_limites_2.pdf" target="_blank">Limites en un réel</a></p>
@@ -147,14 +183,24 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 6 : La convexité</summary>
+         <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_6.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 6 : La convexité
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_convexite_1.pdf" target="_blank">Convexité d'une fonction</a></p>
     </div>
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 7 : La continuité</summary>
+        <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_7.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 7 : La continuité
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_continuite_1.pdf" target="_blank">Continuité d'une fonction</a></p>
       <p><a href="m_t_continuite_2.pdf" target="_blank">Théorème des valeurs intermédiaires</a></p>
@@ -164,7 +210,12 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 8 : La fonction logarithme népérien</summary>
+          <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_8.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 8 : La fonction logarithme népérien
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_ln_1.pdf" target="_blank">Définition de la fonction logarithme népérien</a></p>
       <p><a href="m_t_ln_2.pdf" target="_blank">Relations fonctionnelles du logarithme népérien</a></p>
@@ -173,7 +224,12 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 9 : Dénombrement</summary>
+   <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_9.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 9 : Dénombrement
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_denombrement_1.pdf" target="_blank">Le principe du dénombrement</a></p>
       <p><a href="m_t_denombrement_2.pdf" target="_blank">Arrangements et permutations</a></p>
@@ -183,7 +239,13 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 10 : Succession d'épreuves indépendantes et loi binomiale</summary>
+  <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_10.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 10 : Succession d'épreuves indépendantes et loi binomiale
+    </span>
+  </summary>
+ 
     <div class="details-content">
       <p><a href="m_t_loi_binom_1.pdf" target="_blank">Epreuve de Bernoulli et succession d'épreuves</a></p>
       <p><a href="m_t_loi_binom_2.pdf" target="_blank">Loi binomiale</a></p>
@@ -191,7 +253,13 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 11 : Équation différentielle et primitive</summary>
+    <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_11.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 11 : Équation différentielle et primitive
+    </span>
+  </summary>
+   
     <div class="details-content">
       <p><a href="m_t_primitive_1.pdf" target="_blank">Equation différentielles et primitives</a></p>
       <p><a href="m_t_primitive_2.pdf" target="_blank">Recherche de primitives d'une fonction</a></p>
@@ -200,7 +268,12 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 12 : Fonctions circulaires</summary>
+      <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_12.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 12 : Fonctions circulaires
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_circulaires_0.pdf" target="_blank">Rappels de première</a></p>
       <p><a href="m_t_circulaires_1.pdf" target="_blank">Définitions et propriétés</a></p>
@@ -209,7 +282,12 @@
   </details>
 
   <details class="chapitre">
-    <summary>Chapitre 13 : Calcul intégral</summary>
+    <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_13.png" alt="Miniature chapitre 1" class="miniature">
+      Chapitre 13 : Calcul intégral
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_int_0.pdf" target="_blank">Calcul intégral et GO</a></p>
       <p><a href="m_t_int_1.pdf" target="_blank">Définitions</a></p>
@@ -220,7 +298,13 @@
   </details>
 
   <details class="chapitre">
-    <summary>Les variables aléatoires</summary>
+     <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_14.png" alt="Miniature chapitre 1" class="miniature">
+     Chapitre 14: Les variables aléatoires
+    </span>
+  </summary>
+   
     <div class="details-content">
       <p><a href="m_t_va_0.pdf" target="_blank">Rappels</a></p>
       <p><a href="m_t_va_1.pdf" target="_blank">Opérations sur les variables aléatoires</a></p>
@@ -230,8 +314,13 @@
   </details>
 
   <details class="chapitre">
-    <summary>Orthogonalité dans l'espace</summary>
-    <div class="details-content">
+   <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_15.png" alt="Miniature chapitre 1" class="miniature">
+     Chapitre 15: Orthogonalité dans l'espace
+    </span>
+  </summary>
+      <div class="details-content">
       <p><a href="m_t_ortho_0.pdf" target="_blank">Rappels sur le produit scalaire dans le plan</a></p>
       <p><a href="m_t_ortho_1.pdf" target="_blank">Produit scalaire dans l'espace</a></p>
       <p><a href="m_t_ortho_2.pdf" target="_blank">Orthogonalité de droites et de plans</a></p>
@@ -242,7 +331,12 @@
   </details>
 
   <details class="chapitre">
-    <summary>Python</summary>
+   <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_16.png" alt="Miniature chapitre 1" class="miniature">
+     Python
+    </span>
+  </summary>
     <div class="details-content">
       <p><a href="m_t_python_0.pdf" target="_blank">Les tableaux en python (objet de type list)</a></p>
       <p><a href="m_t_python_1.pdf" target="_blank">Les suites et python</a></p>
@@ -287,3 +381,4 @@
 
   </body>
 </html>
+
