--- a/m/2/index.html
+++ b/m/2/index.html
@@ -15,9 +15,9 @@
     <header id="header" role="banner">
       <div class="logo">
         <!-- Optionnel : laissez im.png si vous avez un logo, sinon supprimez la balise <img>. -->
-        <img src="im.png" alt="Logo du site" class="site-logo">
+        <img src="imsec.png" alt="Logo du site" class="site-logo">
         <div class="site-titles">
-          <h1>Maths en seconde</h1>
+          <h1>Mathématiques en seconde</h1>
           <p id="citation" class="citation" aria-live="polite"></p>
         </div>
       </div>
