--- a/m/t/index.html
+++ b/m/t/index.html
@@ -65,7 +65,7 @@
   </article>
   
 <article class="ressource-card">
-  <a class="ressource-link" href="video_maths.pdf" target="_blank" rel="noopener">
+  <a class="ressource-link" href="../../video/index_video.html" target="_blank" rel="noopener">
     <div class="ressource-thumb">
       <img src="clap_video.jpg"
            alt="Miniature : clap de cinéma pour la vidéo de maths"
