--- a/video/index_video.html
+++ b/video/index_video.html
@@ -41,7 +41,7 @@
         // --- C'EST ICI QUE VOUS AJOUTEZ VOS VIDÉOS ---
         const videos = [
             { title: "Comprendre Chat GPT", id: "j3fvoM5Er2k" },
-			 { title: "Le paradoxe du prisonnier, id: "G9ER5bLxQEU" },
+			 { title: "Le paradoxe du prisonnier", id: "G9ER5bLxQEU" },
 			
             ,
             // Ajoutez une ligne ici pour chaque nouvelle vidéo
