--- a/m/2/index.html
+++ b/m/2/index.html
@@ -61,7 +61,23 @@
 
       
     </a>
-  </article>
+	  </article>
+	
+	<article class="ressource-card">
+  <a class="ressource-link" href="../../video/index_video.html" target="_blank" rel="noopener">
+    <div class="ressource-thumb">
+      <img src="clap_video.jpg"
+           alt="Miniature : clap de cinéma pour la vidéo de maths"
+           class="ressource-img">
+    </div>
+
+    <div class="ressource-text">
+      <h2 class="ressource-title">Vidéos : les Maths et l'informatique dans la vraie vie  !;-)</h2>
+    </div>
+  </a>
+</article>
+
+
   
 <!-- <article class="ressource-card"> -->
   <!-- <a class="ressource-link" href="video_maths.pdf" target="_blank" rel="noopener"> -->
