--- a/m/t/index.html
+++ b/m/t/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="ressource-text">
-      <h2 class="ressource-title">Vidéos : des Maths et l'informatique dans la vraie vie  !;-)</h2>
+      <h2 class="ressource-title">Vidéos : les Maths et l'informatique dans la vraie vie  !;-)</h2>
     </div>
   </a>
 </article>
