--- a/nsi/t/index_2.html
+++ b/nsi/t/index_2.html
@@ -9,6 +9,8 @@
   </head>
   
   <body>
+  
+  
  <div id="conteneur">    
    <header id="header">
   <div class="logo">
@@ -18,6 +20,95 @@
   </div>
  
 </header>
+
+
+<section class="ressources-grid">
+
+  <!-- Carte mentale révision -->
+  <article class="ressource-card">
+    <a class="ressource-link" href="revision_carte_nsi.png" target="_blank" rel="noopener">
+	
+	<div class="ressource-thumb">
+        <img src="revision_carte_nsi.png"
+             alt="Carte mentale : Comment réviser une évaluation"
+             class="ressource-img">
+      </div>
+      <div class="ressource-text">
+        <h2 class="ressource-title">
+          Comment réviser pour réussir une évaluation écrite?
+        </h2>
+      </div>
+
+      
+    </a>
+  </article>
+
+ 
+  <article class="ressource-card">
+    <a class="ressource-link" href="revision_carte_nsi_ep.png" target="_blank" rel="noopener">
+	
+	<div class="ressource-thumb">
+        <img src="revision_carte_nsi_ep.png"
+             alt="Carte mentale : Comment réviser une évaluation"
+             class="ressource-img">
+      </div>
+      <div class="ressource-text">
+        <h2 class="ressource-title">
+          Comment réviser pour réussir une évaluation écrite?
+        </h2>
+      </div>
+
+      
+    </a>
+  </article>
+	<article class="ressource-card">
+  <a class="ressource-link" href="../../video/index_video.html" target="_blank" rel="noopener">
+    <div class="ressource-thumb">
+      <img src="clap_video.jpg"
+           alt="Miniature : clap de cinéma pour la vidéo de maths"
+           class="ressource-img">
+    </div>
+
+    <div class="ressource-text">
+      <h2 class="ressource-title">Vidéos : les Maths et l'informatique dans la vraie vie  !;-)</h2>
+    </div>
+  </a>
+</article>
+
+
+  
+<!-- <article class="ressource-card"> -->
+  <!-- <a class="ressource-link" href="video_maths.pdf" target="_blank" rel="noopener"> -->
+    <!-- <div class="ressource-thumb"> -->
+      <!-- <img src="clap_video.jpg" -->
+           <!-- alt="Miniature : clap de cinéma pour la vidéo de maths" -->
+           <!-- class="ressource-img"> -->
+    <!-- </div> -->
+
+    <!-- <div class="ressource-text"> -->
+      <!-- <h2 class="ressource-title">Vidéos</h2> -->
+    <!-- </div> -->
+  <!-- </a> -->
+<!-- </article> -->
+
+
+<!-- <article class="ressource-card"> -->
+  <!-- <a class="ressource-link" href="video_maths.pdf" target="_blank" rel="noopener"> -->
+    <!-- <div class="ressource-thumb"> -->
+      <!-- <img src="clap_video.jpg" -->
+           <!-- alt="Miniature " -->
+           <!-- class="ressource-img"> -->
+    <!-- </div> -->
+
+    <!-- <div class="ressource-text"> -->
+      <!-- <h2 class="ressource-title">Ressources IA</h2> -->
+    <!-- </div> -->
+  <!-- </a> -->
+<!-- </article> -->
+
+
+</section>
+
 		
 
 <div id="contenu_cours">
@@ -72,7 +163,7 @@
 <details class="chapitre">
   <summary>
     <span class="chapitre-titre">
-      <img src="miniatures/mini_poo.png" alt="Miniature chapitre 3" class="miniature">
+      <img src="miniatures/mini_poo.jpg" alt="Miniature chapitre 3" class="miniature">
       Chapitre 3 : La Programmation Orientée Objet
     </span>
   </summary>
@@ -218,7 +309,7 @@
 <details class="chapitre">
   <summary>
     <span class="chapitre-titre">
-      <img src="miniatures/mini_modularite.jpg" alt="Miniature chapitre 12" class="miniature">
+      <img src="miniatures/mini_mod.jpg" alt="Miniature chapitre 12" class="miniature">
       Chapitre 12 : Modularité
     </span>
   </summary>
@@ -311,7 +402,7 @@
 <details class="chapitre">
   <summary>
     <span class="chapitre-titre">
-      <img src="miniatures/mini_para.jpg" alt="Miniature" class="miniature">
+      <img src="miniatures/mini_par.jpg" alt="Miniature" class="miniature">
    Chapitre 19 : Paradigmes de programmation
     </span>
   </summary>
@@ -336,7 +427,18 @@
   </div>
 </details>		
  
-		
+<details class="chapitre">
+  <summary>
+    <span class="chapitre-titre">
+      <img src="miniatures/mini_val.jpg" alt="Miniature" class="miniature">
+      Validation d'un programme
+    </span>
+  </summary>
+  <div class="details-content">
+    <p><a href="nsi_t_validation_1.pdf">Validation d'un programme</a></p>
+
+  </div>
+</details>		
 		
 		
     </div>
