--- a/m/2/index.html
+++ b/m/2/index.html
@@ -78,6 +78,23 @@
 </article>
 
 
+
+	<article class="ressource-card">
+  <a class="ressource-link" href="automatismes.pdf" target="_blank" rel="noopener">
+    <div class="ressource-thumb">
+      <img src="miniature_automatismes.jpg"
+           alt="Miniature : clap de cinéma pour la vidéo de maths"
+           class="ressource-img">
+    </div>
+
+    <div class="ressource-text">
+      <h2 class="ressource-title">Automatismes;-)</h2>
+    </div>
+  </a>
+</article>
+
+
+
   
 <!-- <article class="ressource-card"> -->
   <!-- <a class="ressource-link" href="video_maths.pdf" target="_blank" rel="noopener"> -->
