--- a/m/t/index.html
+++ b/m/t/index.html
@@ -80,7 +80,19 @@
 
 </section>
   
+	<article class="ressource-card">
+  <a class="ressource-link" href="automatismes.pdf" target="_blank" rel="noopener">
+    <div class="ressource-thumb">
+      <img src="miniature_automatismes.jpg"
+           alt="Miniature : clap de cinéma pour la vidéo de maths"
+           class="ressource-img">
+    </div>
 
+    <div class="ressource-text">
+      <h2 class="ressource-title">Automatismes;-)</h2>
+    </div>
+  </a>
+</article>
 
 
 <div id="contenu_cours">
