--- a/m/2/index.html
+++ b/m/2/index.html
@@ -264,7 +264,7 @@
             <p><a class="td" href="m_2_factorisations.pdf" target="_blank" rel="noopener">Factorisations</a></p>
             <p><a class="td" href="m_2_equations_produit.pdf" target="_blank" rel="noopener">Équation produit</a></p>
 			<p><a class="td" href="m_2_forme_adaptee.pdf" target="_blank" rel="noopener">Choisir la forme adaptée</a></p>
-			<p><a class="td" href="m_2_egalité.pdf" target="_blank" rel="noopener">Montrer une égalité</a></p>
+			<p><a class="td" href="m_2_egalite.pdf" target="_blank" rel="noopener">Montrer une égalité</a></p>
             <p><a class="td" href="m_2_equations_rationnelles.pdf" target="_blank" rel="noopener">Équations rationnelles</a></p>
           </div>
         </details>
