--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -329,8 +329,8 @@
   <div class="details-content">
  <p> <a href="nsi_t_graphe_1.pdf">Définitions</a> </p>
 		<p> <a href="nsi_t_graphe_2.pdf">Implémentation d'un graphe</a> </p>
-		<p> <a href="nsi_t_algo_graphe_2.pdf">Parcours en profondeur</a> </p>
-		<p> <a href="nsi_t_algo_graphe_3.pdf">Applications</a> </p>
+		<p> <a href="nsi_t_graphe_3.pdf">Les différents parcours de graphe</a> </p>
+		<p> <a href="nsi_t_graphe_4.pdf">Applications</a> </p>
   </div>
 </details>
 
